* Fix problem with job generation convergence
* Force v2d file to start with a letter
* oms2v2d: warn if both .skd and .vex are found; default to .vex
* Source names were confused: no distiction was made between the vex "def" name and the source name.  Fixed.
* Check for sources with illegal names
* Improved function/variable naming to indicate explicitly where some def names are used

Version 1.0.3
~~~~~~~~~~~~~
* oms2v2d: trap missing FFT_SIZE and SPECTRAL_AVERAGE parameters
* Actually respect clock breaks!
* Fix some logic to avert some unneeded warnings
* Backport some compiler warning fixes from trunk
* Don't require DIFX_VERSION to be set
* Check that all supplied antenna, source, scan and mode names are in vex file
* Huge speed-up by not constantly sorting events
* Try to match Upper and Lower sideband channels when necessary
* Fix convergence problem when there is no time gap between modules
* Version for DiFX-1.5.3

Version 1.0.2
~~~~~~~~~~~~~
* Add support for VLBN "format" -- that is VLBA with no data modulation
* Improved printing in corrparams, added tolerance for clock date detection
* Treat warnings as errors; use --force to override
* Fix some compiler warnings
* Add deltaClock and deltaClockRate
* Further fix to generated flags when an antenna is not in a job
* More user warnings
* This is the version for DiFX-1.5.2

Version 1.0.1
~~~~~~~~~~~~~
* Post DiFX-1.5.1
* Improved algorithm for determining blocks per send
* Zero length scans are ignored
* Warn if no clock values are applied on a job/antenna basis
* Don't let send duration exceed 2 seconds
* oms2v2d respects TWEAK_INT_TIME parameter

Version 1.0
~~~~~~~~~~~
* oms2v2d: correct use of POLARIZATION
* Version for DiFX-1.5.1

Version 0.2.3
~~~~~~~~~~~~~
* Mark5B support
* format override support
* Pulsar profile mode
* Split jobs at leap second
* ANTENNA blocks get antenna names capitalized
* Clean up parsing of .v2d a little bit
* (Adam) Initialize some ANTENNA block variables