@@ -7,6 +7,7 @@ Version 1.0.4
 * Source names were confused: no distiction was made between the vex "def" name and the source name.  Fixed.
 * Check for sources with illegal names
 * Improved function/variable naming to indicate explicitly where some def names are used
+* Allow generation of 1-antenna jobs
 
 Version 1.0.3
 ~~~~~~~~~~~~~
